tests/integration/security/sds_ingress_k8sca/testdata/bookinfo-single-mtls-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bookinfo-gateway-1
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
    - port:
        number: 443
        name: https-bookinfo-1
        protocol: HTTPS
      tls:
        mode: MUTUAL
        credentialName: "bookinfo-credential-1" # must be the same as secret
      hosts:
        - "bookinfo1.example.com"
---
